--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            
         </div>
 
-         <div id="switch" onclick="togglemode()"> 
+         <div id="switch" onclick="togglemodegit()"> 
           
          <button>
           </button>
