--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="ligh"> 
+<html lang="pt-br" class="light"> 
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
            
         </div>
 
-         <div id="switch" onclick="togglemodegit()"> 
+         <div id="switch" onclick="togglemode()"> 
           
          <button>
           </button>
@@ -76,7 +76,7 @@
   </body>
   </html>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js>
 
   </body>
 </html>
